--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -41,6 +41,7 @@ jobs:
       uses: cypress-io/github-action@v2
       with:
         record: true
+        tag: browser-${{ matrix.browser }}
         start: yarn start
         wait-on: 'http://localhost:3000'
         wait-on-timeout: 120
