add patternfly to dependaboot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,8 @@ updates:
     schedule:
       interval: "daily"
     allow:
+      - dependency-name: "@patternfly/*"
+        dependency-type: "direct"
       - dependency-name: "@cypress/*"
         dependency-type: "direct"
       - dependency-name: "cypress*"
